--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "html2canvas": "^1.0.0-rc.7",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "vue-loader-v16": "^16.0.0-beta.5.4"
